.k8s/ingress-resources.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: default
  name: ingress-router
spec:
  rules:
  - http:
      paths:
      - path: /money-tracker(/|$)(.*)
        backend:
          serviceName: money-tracker-service
          servicePort: 8080
